<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForecastFragment">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:background="#B5D3E7"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="16dp">

            <TextView
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:text="@string/mon" />

            <ImageView
                android:layout_width="99dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:src="@drawable/sunny" />

            <TextView
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:text="@string/partly_cloudy_24_c_32_c" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="16dp">

            <TextView
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:text="@string/tue" />

            <ImageView
                android:layout_width="99dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:src="@drawable/rainy" />

            <TextView
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:text="@string/showers_24_c_30_c" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="16dp">

            <TextView
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:text="@string/wed" />

            <ImageView
                android:layout_width="99dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:src="@drawable/rainy" />

            <TextView
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:text="@string/rain_24_c_32_c" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="16dp">

            <TextView
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:text="@string/thu" />

            <ImageView
                android:layout_width="99dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:src="@drawable/rainy" />

            <TextView
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:text="@string/scattered_showers_24_c_27_c" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="16dp">

            <TextView
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:text="@string/fri" />

            <ImageView
                android:layout_width="99dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:src="@drawable/sunny" />

            <TextView
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:text="@string/mostly_cloudy_22_c_30_c" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="16dp">

            <TextView
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:text="@string/sat" />

            <ImageView
                android:layout_width="99dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:src="@drawable/sunny" />

            <TextView
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:text="@string/partly_cloudy_24_c_31_c" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="16dp">

            <TextView
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:text="Sun" />

            <ImageView
                android:layout_width="99dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:src="@drawable/rainy" />

            <TextView
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:text="@string/thunderstroms_24_c_32_c" />

        </LinearLayout>

    </LinearLayout>
</ScrollView>
